edited stream test